# Building-a-Real-World-AI-Training-Environment-using-OpenEnv

./: .gitignore  Dockerfile  README.md  app.py  baseline_inference.py  client.py  evaluate.py  graders.py  inference.py  main.py  models.py  openenv.yaml  requirements.txt  self_check_graders.py  train_rl.py  verify_graders.py  verify_output.txt
.github/workflows/: ci.yml
agent/: __init__.py  baseline.py  business_agent.py
customer_support_env/: __init__.py  app.py  requirements.txt
customer_support_env/tests/: __init__.py  test_reward_shaping.py
hackathon_materials/: readme_snippet.md
hackathon_materials/traces/: trace_easy_q4.json  trace_medium_q50.json
open_env_project/: CHANGELOG.md  Dockerfile  README.md  app.py  baseline.py  baseline_inference.py  demo_nontech.py  deploy.ps1  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  train_rl.py
open_env_project/agent/: business_agent.py
open_env_project/customer_support_env/: Dockerfile  README.md  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml
open_env_project/customer_support_env/tests/: test_openenv_spec.py
open_env_project/hackathon_materials/: hackathon_submission.md  openenv_skeleton.yaml  presentation_summary.md
open_env_project/hackathon_materials/traces/: trace_hard_q50.json
open_env_project/server/: app.py  environment.py
open_env_project/tests/: test_ceo_env.py  test_graders.py  test_reward_shaping.py
server/: app.py  environment.py
tests/: test_ceo_env.py  test_graders.py  test_openenv_spec.py
