[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous_ceo_env"
version = "2.0.0"
description = "Autonomous CEO AI Simulator - OpenEnv Compliant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.0",
    "gymnasium>=0.29.1",
    "gradio>=4.20.0",
    "matplotlib>=3.9.0",
    "plotly>=5.20.0",
    "openenv-core>=0.2.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "pytest>=8.0.0",
    "stable-baselines3>=2.3.0",
    "shimmy>=1.3.0",
    "openai>=1.0.0",
    "pandas>=2.0.0"
]

[project.scripts]
server = "server.app:main"
